# MyMindustry

./: CMakeLists.txt  README.md  main.cpp
code/: main.cpp
code/engine/: engine.h
code/engine/include/: Entity.h  GameCore.h  Scene.h  types.h
code/engine/include/GUI/: Button.h  ButtonStyle.h  Grid.h  Image.h  ImprovedUsualButton.h  Text.h  TextStyle.h  UsualButton.h
code/engine/include/managers/: AssetsManager.h  CameraManager.h  ConfigManager.h  EntitiesManager.h  LoggingManager.h  MemoryManager.h  ScenesManager.h
code/engine/include/managers/variables/: SmartStr.h  SmartVariable.h
code/engine/include/shapes/: ArcShape.h
code/engine/nlohmann/: json.hpp
code/engine/srcs/: Entity.cpp  GameCore.cpp  Scene.cpp
code/engine/srcs/GUI/: Button.cpp  ButtonStyle.cpp  Grid.cpp  Image.cpp  ImprovedUsualButton.cpp  Text.cpp  TextStyle.cpp  UsualButton.cpp
code/engine/srcs/managers/: AssetsManager.cpp  CameraManager.cpp  ConfigManager.cpp  EntitiesManager.cpp  LoggingManager.cpp  MemoryManager.cpp  ScenesManager.cpp
code/engine/srcs/managers/variables/: SmartStr.cpp  SmartVariable.cpp
code/engine/srcs/shapes/: ArcShape.cpp
code/game/: GameModeSelectionScene.cpp  GameModeSelectionScene.h  MainMenuScene.cpp  MainMenuScene.h  editor.h  game.h  scenes.h
code/game/editor/: MapEditorScene.cpp  MapEditorScene.h  editor.h
code/game/templates/: editor.h  scenes.h
resources/config/: blocks.json  control.json  game.json  langs.json  menu.json  minerals.json  resources.json  window.json
resources/languages/: en.lang
resources/maps/: blocks_ids.TXT  map_1.mp  map_2.mp
resources/sprites/packs_info/: floors_pack.json  storages_pack.json  walls_pack.json
